syntax = "proto3";

package opendut.carl.services.peer_messaging_broker;

import "opendut/types/cluster/cluster.proto";
import "opendut/types/peer/peer.proto";
import "opendut/types/peer/configuration/api.proto";
import "opendut/types/vpn/vpn.proto";

service PeerMessagingBroker {
  rpc Open(stream Upstream) returns (stream Downstream);
}

message Upstream {
  TracingContext context = 1;
  oneof message {
    Ping ping = 2;
  }
}

message Downstream {
  TracingContext context = 1;
  oneof message {
    Pong pong = 2;
    ApplyPeerConfiguration apply_peer_configuration = 3;
    DisconnectNotice disconnect_notice = 4;
  }
}

message Ping {}
message Pong {}
message DisconnectNotice {}


message ApplyPeerConfiguration {
  opendut.types.peer.configuration.api.OldPeerConfiguration old_configuration = 1;
  opendut.types.peer.configuration.api.PeerConfiguration configuration = 2;
}

message TracingContext {
  map<string, string> values = 1;
}
